--- a/src/components/Section/styles.scss
+++ b/src/components/Section/styles.scss
@@ -6,15 +6,33 @@
   justify-content: flex-end;
   align-items: flex-start;
   height: 100svh;
-  font-family: "Orbitron";
+  font-family: "Urbanist";
+  // font-family: "Orbitron";
   pointer-events: none;
   &__title {
     text-align: left;
     margin-left: 5rem;
-    margin-bottom: 10rem;
+    margin-bottom: 4rem;
+    // margin-bottom: 10rem;
+    &--number {
+      // letter-spacing: 20px;
+      font-weight: 100;
+      font-size: 5rem;
+      margin: 0;
+    }
+    &--subject {
+      font-family: "Urbanist";
+      font-weight: 100;
+      letter-spacing: 20px;
+      font-size: clamp(5rem, 10vw, 10rem);
+      margin: 0;
+    }
   }
-  h1 {
+  h2 {
     margin: 0;
-    font-size: 10rem;
+    line-height: 100px;
+    // font-size: 10rem;
+    // font-size: 11vw;
+    // font-size: clamp(5rem, 10vw, 10rem);
   }
 }
