--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #131313;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -29,9 +29,16 @@ body {
   /* place-items: center; */
   min-width: 320px;
   min-height: 100vh;
-  
+  /* Firefox */
 }
 
+html{
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;
+}
+html::-webkit-scrollbar{
+  display: none;
+}
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
