--- a/src/components/Mesh/styles.scss
+++ b/src/components/Mesh/styles.scss
@@ -1,8 +1,13 @@
 .mesh-section {
-  z-index: 1;
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  &--full-width {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+  }
 }
