--- a/src/components/Section/styles.scss
+++ b/src/components/Section/styles.scss
@@ -13,6 +13,10 @@
     text-align: left;
     margin-left: 5rem;
     margin-bottom: 4rem;
+    @media screen and (max-width: 700px) {
+      margin-left: 5%;
+      margin-bottom: 5%;
+    }
     // margin-bottom: 10rem;
     &--number {
       // letter-spacing: 20px;
@@ -26,6 +30,10 @@
       letter-spacing: 20px;
       font-size: clamp(5rem, 10vw, 10rem);
       margin: 0;
+      @media screen and (max-width: 700px) {
+        letter-spacing: 10px;
+        font-size: clamp(1rem, 10vw, 10rem);
+      }
     }
   }
   h2 {
