Refacto + Add SocialBar component

--- a/src/components/Menu/styles.scss
+++ b/src/components/Menu/styles.scss
@@ -2,6 +2,7 @@
   font-family: "Urbanist";
   letter-spacing: 10px;
   &__button {
+    width: 80px;
     position: relative;
     z-index: 10;
     cursor: pointer;
