--- a/src/components/ProjectsSlider/styles.scss
+++ b/src/components/ProjectsSlider/styles.scss
@@ -21,13 +21,26 @@
   &::before {
     left: 0;
   }
+  &__nav-button {
+    position: absolute;
+    font-family: "Urbanist";
+    cursor: pointer;
+    // left: 0;
+    top: 42%;
+    &--left {
+      left: 5px;
+    }
+    &--right {
+      right: 5px;
+    }
+  }
 }
 
 .project-slider__cards {
   display: flex;
   align-items: center;
   max-width: 100vw;
-  min-height: 100vh;
+  min-height: 40vh;
   transition: all 1s;
 
   & > :first-child,
@@ -35,8 +48,13 @@
   & > :nth-child(3),
   & > :nth-child(4),
   & > :last-child {
-    transition: left 1s, height 1s, width 1s, z-index 0s;
+    transition: left 0.5s, height 0.5s, width 0.5s, margin-top 0.5s 0.5s,
+      z-index 0s;
   }
+  // & > :first-child,
+  // & > :last-child {
+  //   transition: left 2s, height 2s, width 2s, z-index 0s;
+  // }
 
   & > :first-child,
   & > :last-child {
