--- a/src/components/Section/styles.scss
+++ b/src/components/Section/styles.scss
@@ -1,13 +1,12 @@
-.hero {
+.section {
   position: relative;
-  z-index: 10;
+  z-index: 1;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   align-items: flex-start;
   height: 100svh;
   font-family: "Urbanist";
-  // font-family: "Orbitron";
   pointer-events: none;
   &__title {
     text-align: left;
@@ -17,18 +16,17 @@
       margin-left: 5%;
       margin-bottom: 5%;
     }
-    // margin-bottom: 10rem;
     &--number {
-      // letter-spacing: 20px;
       font-weight: 100;
-      font-size: 5rem;
+      font-size: clamp(5rem, 10vw, 5rem);
+
       margin: 0;
     }
     &--subject {
       font-family: "Urbanist";
       font-weight: 100;
       letter-spacing: 20px;
-      font-size: clamp(5rem, 10vw, 10rem);
+      font-size: clamp(5rem, 10vw, 7rem);
       margin: 0;
       @media screen and (max-width: 700px) {
         letter-spacing: 10px;
@@ -39,8 +37,5 @@
   h2 {
     margin: 0;
     line-height: 100px;
-    // font-size: 10rem;
-    // font-size: 11vw;
-    // font-size: clamp(5rem, 10vw, 10rem);
   }
 }
