Add Experience Component

--- a/src/components/ProjectsSlider/styles.scss
+++ b/src/components/ProjectsSlider/styles.scss
@@ -5,6 +5,7 @@
   align-items: center;
   width: 100vw;
   transition: all 1s;
+  margin-bottom: 200px;
   &::after,
   &::before {
     content: "";
