--- a/src/components/Section/styles.scss
+++ b/src/components/Section/styles.scss
@@ -6,6 +6,7 @@
   justify-content: flex-end;
   align-items: flex-start;
   height: 100svh;
+  width: 100vw;
   font-family: "Urbanist";
   // pointer-events: none;
   &__children {
