--- a/src/App.css
+++ b/src/App.css
@@ -4,5 +4,8 @@
   /* margin: 0 auto; */
   /* padding: 2rem; */
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 400px;
   
 }
