--- a/src/components/Contact/ContactForm/Input/styles.scss
+++ b/src/components/Contact/ContactForm/Input/styles.scss
@@ -1,8 +1,21 @@
 .input {
   position: relative;
   width: 100%;
+  &__checkbox {
+    position: absolute;
+    top: 0;
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    &--icon {
+      display: flex;
+      align-items: center;
+      font-size: 1.4rem;
+    }
+  }
   &__label,
   &__field {
+    cursor: pointer;
     font-size: 1.4rem;
     font-family: "Urbanist";
     font-weight: 300;
@@ -19,6 +32,8 @@
       color: #ffffff4d;
       transition: font-size 0.3s, top 0.3s, color 0.3s;
     }
+    // &--checkbox {
+    // }
   }
   &__field {
     width: 100%;
@@ -29,7 +44,7 @@
     border-bottom: 1px solid #fff;
     color: #fff;
     height: 40px;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
     &:focus {
       color: #fff;
       outline: none;
@@ -44,4 +59,12 @@
     color: rgba(255, 0, 0, 0.732);
     font-size: 0.8rem;
   }
+}
+
+/* Styles pour la case à cocher non cochée */
+input[type="checkbox"] {
+  /* Cacher la case à cocher par défaut */
+  opacity: 0;
+  /* Positionnement personnalisé */
+  position: relative;
 }
