--- a/src/components/Contact/styles.scss
+++ b/src/components/Contact/styles.scss
@@ -3,7 +3,7 @@
   margin-top: auto;
   &__picture {
     // overflow: hidden;
-    opacity: 0.5;
+    // opacity: 0;
     max-width: 100vw;
     position: absolute;
     z-index: 0;
