--- a/src/components/Experiences/styles.scss
+++ b/src/components/Experiences/styles.scss
@@ -20,6 +20,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    &-container {
+      width: 60vw;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
     &-lists {
       display: flex;
       width: 70%;
