--- a/src/components/Section/styles.scss
+++ b/src/components/Section/styles.scss
@@ -21,7 +21,8 @@
     pointer-events: none;
     text-align: left;
     margin-left: 5rem;
-    margin-bottom: 4rem;
+    margin-bottom: 2rem;
+    margin-top: 2rem;
     @media screen and (max-width: 700px) {
       margin-left: 5%;
       margin-bottom: 5%;
