--- a/src/components/Skills/styles.scss
+++ b/src/components/Skills/styles.scss
@@ -3,8 +3,8 @@
   justify-content: center;
   width: 100vw;
   height: 60vh;
-  margin-top: -60px;
-  margin-bottom: 200px;
+  // margin-top: -60px;
+  // margin-bottom: 200px;
   font-family: "Urbanist";
   & h3 {
     font-weight: 200;
