--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,7 @@ body {
 html{
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;
+  /* cursor: none; */
 }
 html::-webkit-scrollbar{
   display: none;
