--- a/src/components/ProjectsSlider/styles.scss
+++ b/src/components/ProjectsSlider/styles.scss
@@ -5,7 +5,7 @@
   align-items: center;
   width: 100vw;
   transition: all 1s;
-  margin-bottom: 200px;
+  // margin-bottom: 200px;
   &::after,
   &::before {
     content: "";
@@ -26,8 +26,7 @@
     position: absolute;
     font-family: "Urbanist";
     cursor: pointer;
-    // left: 0;
-    top: 42%;
+    top: 46%;
     &--left {
       left: 5px;
     }
@@ -41,7 +40,7 @@
   display: flex;
   align-items: center;
   max-width: 100vw;
-  min-height: 40vh;
+  min-height: 70vh;
   transition: all 1s;
 
   & > :first-child,
