--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
   line-height: 1.5;
   font-weight: 400;
 
+  position: relative;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #131313;
@@ -34,11 +35,11 @@ body {
 
 html{
   -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;
+  /* scrollbar-width: none; */
   /* cursor: none; */
 }
 html::-webkit-scrollbar{
-  display: none;
+  /* display: none; */
 }
 h1 {
   font-size: 3.2em;
