Update Component + Paralaxx Effect

--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -7,5 +7,14 @@
   padding: 2rem;
   &__logo {
     height: 60px;
+    overflow: hidden;
+  }
+  &__separator {
+    position: fixed;
+    top: 0;
+    left: 50%;
+    height: 40px;
+    width: 1px;
+    background-color: #fff;
   }
 }
