--- a/src/components/SocialBar/styles.scss
+++ b/src/components/SocialBar/styles.scss
@@ -5,9 +5,15 @@
   right: 20px;
   display: flex;
   flex-direction: column;
-  border-left: solid 1px white;
   a {
     margin-bottom: 30px;
     margin-left: 20px;
+  }
+  &__bar {
+    position: absolute;
+    bottom: 0;
+    height: 100%;
+    width: 1px;
+    background-color: #fff;
   }
 }
