--- a/src/components/Section/styles.scss
+++ b/src/components/Section/styles.scss
@@ -8,11 +8,9 @@
   height: 200svh;
   width: 100vw;
   font-family: "Urbanist";
-  // pointer-events: none;
   &__children {
     position: fixed;
     top: calc(100% / 5);
-    // left: 20%;
     width: 100vw;
     height: 60vh;
     display: flex;
@@ -26,8 +24,6 @@
     left: 20%;
     pointer-events: none;
     text-align: left;
-    // margin-left: 5rem;
-    // margin-bottom: 2rem;
     margin-top: 2rem;
     &--main {
       top: calc(100% / 5);
@@ -39,18 +35,14 @@
       margin: 0;
       width: 100vw;
       height: 100%;
-      // font-size: clamp(5rem, 10vw, 7rem);
     }
     @media screen and (max-width: 700px) {
-      // margin-left: 5%;
-      // margin-bottom: 5%;
     }
     &--number {
       display: inline-block;
+      letter-spacing: normal;
       font-weight: 200;
-      // font-size: clamp(2rem, 4vw, 4rem);
       font-size: 2rem;
-
       margin: 0;
       margin-right: 30px;
     }
@@ -59,17 +51,14 @@
       font-family: "Urbanist";
       font-weight: 100;
       letter-spacing: 20px;
-      font-size: clamp(2rem, 6vw, 6rem);
-
+      font-size: clamp(2rem, 4vw, 6rem);
       margin: 0;
+      &--main {
+        font-size: clamp(2rem, 8vw, 9rem) !important;
+      }
       @media screen and (max-width: 700px) {
         letter-spacing: 10px;
-        font-size: clamp(1rem, 10vw, 10rem);
       }
     }
-  }
-  h2 {
-    margin: 0;
-    line-height: 100px;
   }
 }
