Update First Section

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Urbanist',Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -82,4 +82,8 @@ html {
   button {
     background-color: #f9f9f9;
   }
+}
+
+h1 {
+  margin: 0;
 }
