--- a/src/components/Menu/styles.scss
+++ b/src/components/Menu/styles.scss
@@ -32,11 +32,14 @@
     }
   }
   &__loading {
-    position: absolute;
-    top: 0;
+    position: fixed;
+    // position: absolute;
+    // top: 0;
+    top: calc(50% - 44px);
+    left: calc(50% - 40px);
     width: 80px;
-    height: 87px;
-    background-color: #191919;
+    height: 88px;
+    background-color: #2a2a2a;
   }
 
   &__nav-list {
