--- a/src/components/Section/styles.scss
+++ b/src/components/Section/styles.scss
@@ -29,10 +29,10 @@
       top: calc(100% / 5);
       flex-direction: column;
       justify-content: center;
-      align-items: center;
       top: 0;
       left: 0;
       margin: 0;
+      margin-left: 5%;
       width: 100vw;
       height: 100%;
     }
@@ -54,10 +54,30 @@
       font-size: clamp(2rem, 4vw, 6rem);
       margin: 0;
       &--main {
-        font-size: clamp(2rem, 8vw, 9rem) !important;
+        display: block;
+        font-size: clamp(2rem, 5vw, 9rem) !important;
+        text-align: left;
+        letter-spacing: 4px;
       }
       @media screen and (max-width: 700px) {
         letter-spacing: 10px;
+      }
+    }
+    &--sentence {
+      font-size: clamp(1rem, 2vw, 2rem);
+      font-family: "Urbanist";
+      font-weight: 100;
+      margin: 0;
+      &--bar {
+        position: fixed;
+        left: 0;
+        top: calc(50% + 12vw);
+        height: 1px;
+        width: 20%;
+        background-color: #fff;
+        @media screen and (max-width: 700px) {
+          top: calc(60% + 12vw);
+        }
       }
     }
   }
