--- a/src/components/Mesh/styles.scss
+++ b/src/components/Mesh/styles.scss
@@ -1,14 +1,12 @@
 .mesh-section {
   z-index: -1;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  &--full-width {
-    position: fixed;
-    z-index: -1;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: fixed;
+  &--unfixed {
+    bottom: 42%;
+    position: absolute;
   }
 }
