--- a/src/components/ProjectsSlider/ProjectCard/styles.scss
+++ b/src/components/ProjectsSlider/ProjectCard/styles.scss
@@ -39,6 +39,7 @@
       clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
       filter: grayscale(0);
       transition: all 0.5s;
+      object-fit: contain;
     }
     &--opened + .project-card__border {
       opacity: 0;
