--- a/src/components/ProjectsSlider/ProjectShowCase/styles.scss
+++ b/src/components/ProjectsSlider/ProjectShowCase/styles.scss
@@ -26,6 +26,7 @@
       letter-spacing: 3rem;
       font-weight: 100;
       margin-top: 70px;
+      position: absolute;
     }
     & img {
       box-shadow: 0px 20px 19px 1px rgba(0, 0, 0, 0.4);
@@ -36,7 +37,8 @@
     }
   }
   &__grid-info {
-    margin-top: 180px;
+    // margin-top: 180px;
+    margin-top: 65vh;
     width: 70%;
     display: flex;
     justify-content: space-between;
