--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -5,6 +5,10 @@
   z-index: 11;
   width: calc(100% - 4rem);
   padding: 2rem;
+  @media screen and (max-width: 700px) {
+    width: calc(100% - 2rem);
+    padding: 1rem;
+  }
   &__logo {
     height: 60px;
     overflow: hidden;
