--- a/src/components/Section/styles.scss
+++ b/src/components/Section/styles.scss
@@ -16,6 +16,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    @media screen and (max-width: 700px) {
+      height: initial;
+    }
   }
   &__title {
     position: fixed;
@@ -36,8 +39,6 @@
       width: 100vw;
       height: 100%;
     }
-    @media screen and (max-width: 700px) {
-    }
     &--number {
       display: inline-block;
       letter-spacing: normal;
@@ -55,12 +56,13 @@
       margin: 0;
       &--main {
         display: block;
-        font-size: clamp(2rem, 5vw, 9rem) !important;
+        font-size: clamp(2.6rem, 5vw, 9rem) !important;
         text-align: left;
         letter-spacing: 4px;
       }
       @media screen and (max-width: 700px) {
-        letter-spacing: 10px;
+        letter-spacing: 5px;
+        margin-top: 30px;
       }
     }
     &--sentence {
@@ -79,6 +81,11 @@
           top: calc(60% + 12vw);
         }
       }
+    }
+  }
+  &__mesh {
+    @media screen and (max-width: 550px) {
+      display: none;
     }
   }
 }
