--- a/src/components/SocialBar/styles.scss
+++ b/src/components/SocialBar/styles.scss
@@ -5,9 +5,16 @@
   right: 20px;
   display: flex;
   flex-direction: column;
+  @media screen and (max-width: 700px) {
+    right: 10px;
+  }
   a {
     margin-bottom: 30px;
     margin-left: 20px;
+    @media screen and (max-width: 700px) {
+      margin-bottom: 10px;
+      margin-left: 10px;
+    }
   }
   &__bar {
     position: absolute;
