--- a/src/components/ProjectsSlider/styles.scss
+++ b/src/components/ProjectsSlider/styles.scss
@@ -51,16 +51,15 @@
     transition: left 0.5s, height 0.5s, width 0.5s, margin-top 0.5s 0.5s,
       z-index 0s;
   }
-  // & > :first-child,
-  // & > :last-child {
-  //   transition: left 2s, height 2s, width 2s, z-index 0s;
-  // }
 
   & > :first-child,
   & > :last-child {
     z-index: 1;
     height: 260px;
     width: 200px;
+    @media screen and (max-width: 800px) {
+      display: none;
+    }
   }
 
   & > :nth-child(2),
@@ -68,6 +67,10 @@
     z-index: 2;
     height: 360px;
     width: 300px;
+    @media screen and (max-width: 800px) {
+      height: 210px;
+      width: 150px;
+    }
   }
 
   & > :first-child {
@@ -78,6 +81,9 @@
   & > :nth-child(2) {
     position: absolute;
     left: calc(30% - 150px);
+    @media screen and (max-width: 800px) {
+      left: calc(25% - 75px);
+    }
   }
 
   & > :nth-child(3) {
@@ -86,10 +92,23 @@
     width: 500px;
     position: absolute;
     left: calc(50% - 250px);
+    @media screen and (max-width: 800px) {
+      height: 380px;
+      width: 300px;
+      left: calc(50% - 150px);
+    }
+    @media screen and (max-width: 600px) {
+      height: 280px;
+      width: 200px;
+      left: calc(50% - 100px);
+    }
   }
   & > :nth-child(4) {
     position: absolute;
     left: calc(70% - 150px);
+    @media screen and (max-width: 800px) {
+      left: calc(75% - 75px);
+    }
   }
   & > :last-child {
     position: absolute;
